@@ -339,7 +339,14 @@ class LibraryUser < User
       false
     else
       now = Time.now.utc.to_date
-      dob = Time.strptime(bdate[0], "%Y-%m-%d")
+      begin
+        dob = Time.strptime(bdate[0], "%Y-%m-%d")
+      rescue ArgumentError
+        # When user is stored with invalid date,
+        # set arbitrary date as not to get an invalid user
+        # TODO use age=0 as unknown age?
+        dob = Time.strptime("1980-01-01", "%Y-%m-%d")
+      end
       age = now.year - dob.year - ((now.month > dob.month || (now.month == dob.month && now.day >= dob.day)) ? 0 : 1)
       self.age = age
       self.name = name[0]
